# atlas-admin

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  sources.list
apps/ai/: __init__.py  admin.py  apps.py  models.py
apps/assessments/: __init__.py  admin.py  apps.py  models.py
apps/daily/: admin.py  apps.py  models.py
apps/files/: __init__.py  admin.py  apps.py  models.py
apps/goals/: __init__.py  admin.py  apps.py  models.py
apps/payments/: admin.py  apps.py  models.py
apps/reports/: __init__.py  admin.py  apps.py  models.py
apps/shares/: __init__.py  admin.py  apps.py  models.py
apps/users/: __init__.py  admin.py  apps.py  models.py
apps/weekly/: admin.py  apps.py  models.py
atlas_admin/: __init__.py  asgi.py  settings.py  wsgi.py
common/: __init__.py  business_admin.py  db_router.py  permissions.py
docs/: ARCHITECTURE.md
tests/: conftest.py  test_admin_business_permissions.py  test_business_models.py  test_django_setup.py
