[tool.poetry]
name = "atlas-admin"
version = "0.1.0"
description = "Atlas enterprise admin"
authors = ["Atlas Team"]
readme = "README.md"
packages = [{ include = "atlas_admin" }, { include = "apps" }, { include = "common" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
django = ">=6.0,<6.1"
django-unfold = "^0.65.0"
django-import-export = "^4.3.8"
pymysql = "^1.1.1"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-django = "^4.11.1"
ruff = "^0.12.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "atlas_admin.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.black]
line-length = 120
target-version = ["py313"]
